fix: dark mode bug

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,3 @@
-@layer components {
-  .divider {
-    @apply box-content my-12 h-px dark:bg-zinc-800 dark:border-black transition-colors;
-  }
-}
-
 html {
   font-family: 'IBM Plex Sans', sans-serif;
   scroll-behavior: smooth;
@@ -13,7 +7,6 @@ body {
   font-size: 16px;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
-  @apply text-zinc-800 bg-white dark:text-zinc-50 dark:bg-zinc-900 transition-colors;
 }
 
 .unreset {
